# starforge

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Package.swift  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
StarforgeLab/App/Sources/: StarforgeLabApp.swift
StarforgeLab/Checks/Fixtures/: full_manifest.json  plain_manifest.json  studio_curator_manifest.json
StarforgeLab/Checks/Sources/: main.swift
StarforgeLab/Parity/Sources/: main.swift
StarforgeLab/Resources/: README.md
StarforgeLab/Support/: python_launcher.c
script/: build_and_run.sh
scripts/: parity_selftest.sh  vendor_python.sh
starforge/: __init__.py  cli.py  collection.py  config.py  curation.py  gallery.py  genome.py  lensing.py  palette.py  presets.py  renderer.py  scoring.py  selection.py  studio.py  video.py
tests/: _genome_golden_v4.json  _pixel_golden_v5.json  test_cli.py  test_coverage_gaps_c6.py  test_curation.py  test_genome_scoring_collection.py  test_golden_pixels_v5.py  test_inspect_outputs.py  test_lensing_v4.py  test_presets_gallery_video.py  test_render_invariants_v4.py  test_renderer.py  test_rng_isolation_v5.py  test_rng_order_lock_v5.py  test_selection_v7.py  test_studio_v7.py  test_subject_pulsar_v6.py  test_subject_v5.py  test_subject_wormhole_v6.py
tools/: inspect_outputs.py  regen_pixel_golden.py
