[project]
name = "starforge"
version = "6.0.0"
description = "Deterministic procedural gravitational-lensing art lab — seeded black holes, lensed galaxies, pulsars, and wormholes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy==2.4.2",
  "pillow==12.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
starforge = "starforge.cli:main"

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
